tiny formatting clean up

--- a/notebooks/AdvancedEDA/common_ingredients_and_routines.ipynb
+++ b/notebooks/AdvancedEDA/common_ingredients_and_routines.ipynb
@@ -27,23 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "tiktok_transcrips = pd.read_csv('../../data/filtered_data/comments_posts_transcripts.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "\n",
+    "tiktok_transcrips = pd.read_csv('../../data/filtered_data/comments_posts_transcripts.csv')\n",
     "cosmetics=pd.read_csv(\"../../data/static_data/most_used_beauty_cosmetics_products_extended_from_kaggle.csv\")"
    ]
   },
@@ -89,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BRANDS from Cosmetics (Kaggle Dataset)"
+    "**BRANDS from Cosmetics (Kaggle Dataset)**"
    ]
   },
   {
@@ -246,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tiktok_Transcripts"
+    "**Tiktok_Transcripts**"
    ]
   },
   {
@@ -1948,7 +1937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleaning the English to en and German to de"
+    "**Cleaning the English to en and German to de**"
    ]
   },
   {
@@ -2279,7 +2268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Analysis for Beiersdorf Brands, Brands, Ingredients, Categories (blush, creams etc) and SkinType"
+    "**Text Analysis for Beiersdorf Brands, Brands, Ingredients, Categories (blush, creams etc) and SkinType**"
    ]
   },
   {
