--- a/notebooks/HashtagsDeepDive/hashtags_deepdive.ipynb
+++ b/notebooks/HashtagsDeepDive/hashtags_deepdive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15,25 +15,30 @@
     }
    ],
    "source": [
-    "\n",
+    "# Import libaries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from collections import Counter\n",
-    "\n",
-    "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import classification_report\n",
-    "\n",
     "from scipy.sparse import hstack\n",
-    "\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "hashtag_posts= pd.read_csv(\"../../data/filtered_data/hashtags_posts.csv\")\n"
+    "import seaborn as sns\n",
+    "from wordcloud import WordCloud\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read file\n",
+    "hashtag_posts= pd.read_csv(\"../../data/filtered_data/hashtags_posts.csv\")"
    ]
   },
   {
@@ -65,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -304,14 +309,12 @@
     }
    ],
    "source": [
-    "\n",
     "hashtag_posts['createTimeISO'] = pd.to_datetime(hashtag_posts['createTimeISO'])\n",
     "# Create new columns\n",
     "hashtag_posts['date'] = hashtag_posts['createTimeISO'].dt.date\n",
     "hashtag_posts['month'] = hashtag_posts['createTimeISO'].dt.strftime('%b')   # e.g., 'Feb'\n",
     "hashtag_posts['year'] = hashtag_posts['createTimeISO'].dt.year\n",
     "hashtag_posts['week'] = hashtag_posts['createTimeISO'].dt.isocalendar().week\n",
-    "\n",
     "\n",
     "hashtag_posts.head()"
    ]
@@ -509,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +648,7 @@
     }
    ],
    "source": [
-    "#hashtags from\n",
+    "#hashtags\n",
     "hashtag_trends = (\n",
     "    hashtag_posts_filtered.groupby(['year', 'week', 'hashtag_name'])\n",
     "    .size()\n",
@@ -673,29 +676,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hashtag Analysis with Enagement \n"
+    "**Hashtag Analysis with Enagement**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "import seaborn as sns\n",
-    "from wordcloud import WordCloud\n",
-    "from datetime import datetime\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "hashtag_posts_filtered['engagement'] = hashtag_posts_filtered['diggCount'] + hashtag_posts_filtered['shareCount'] + hashtag_posts_filtered['commentCount'] + hashtag_posts_filtered['collectCount']\n",
-    "\n",
-    "\n"
+    "hashtag_posts_filtered['engagement'] = hashtag_posts_filtered['diggCount'] + hashtag_posts_filtered['shareCount'] + hashtag_posts_filtered['commentCount'] + hashtag_posts_filtered['collectCount']"
    ]
   },
   {
@@ -1207,12 +1197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_weekly_normalized_table(min_posts=1):\n",
-    "    # Step 1: Aggregate engagement per hashtag per week\n",
+    "    # Aggregate engagement per hashtag per week\n",
     "    weekly_stats = (\n",
     "        hashtag_posts_filtered\n",
     "        .groupby(['hashtag_name', 'year', 'week'])\n",
@@ -1221,16 +1211,16 @@
     "        .reset_index()\n",
     "    )\n",
     "\n",
-    "    # Step 2: Filter hashtags that have enough posts in that week\n",
+    "    # Filter hashtags that have enough posts in that week\n",
     "    weekly_stats = weekly_stats[weekly_stats['post_count'] >= min_posts]\n",
     "\n",
-    "    # Step 3: Normalize weekly engagement within each week\n",
+    "    # Normalize weekly engagement within each week\n",
     "    weekly_stats['normalized_weekly_engagement'] = (\n",
     "        weekly_stats.groupby(['year', 'week'])['weekly_engagement']\n",
     "        .transform(lambda x: x / x.max())\n",
     "    )\n",
     "\n",
-    "    # Step 4: Add a date column for time series plotting\n",
+    "    # Add a date column for time series plotting\n",
     "    weekly_stats['date'] = pd.to_datetime(\n",
     "        weekly_stats['year'].astype(str) + '-' + weekly_stats['week'].astype(str) + '-1',\n",
     "        format='%Y-%W-%w'\n",
