--- a/notebooks/HashtagsDeepDive/hashtags_models.ipynb
+++ b/notebooks/HashtagsDeepDive/hashtags_models.ipynb
@@ -16,7 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load libaries\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "df = pd.read_csv(\"../../data/filtered_data/hashtags_posts.csv\", parse_dates=['createTimeISO'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -29,15 +50,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "# STEP 1: Load your dataset (replace with actual path or query)\n",
-    "df = pd.read_csv(\"../../data/filtered_data/hashtags_posts.csv\", parse_dates=['createTimeISO'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "# STEP 3: Aggregate to hashtag-day level\n",
+    "# Aggregate to hashtag-day level\n",
     "df['post_date'] = df['createTimeISO'].dt.date\n",
     "\n",
     "daily_hashtags = (\n",
@@ -82,8 +95,7 @@
     "]\n",
     "\n",
     "X = daily_hashtags[features]\n",
-    "y = daily_hashtags['is_trending']\n",
-    "\n"
+    "y = daily_hashtags['is_trending']"
    ]
   },
   {
@@ -95,12 +107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['post_date'] = pd.to_datetime(df['post_date'])\n",
-    "unique_dates = df['post_date'].dropna().drop_duplicates().sort_values(ascending=True)\n"
+    "unique_dates = df['post_date'].dropna().drop_duplicates().sort_values(ascending=True)"
    ]
   },
   {
@@ -198,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +230,7 @@
     "explainer = shap.Explainer(model)\n",
     "shap_values = explainer(X_test)\n",
     "\n",
-    "shap.summary_plot(shap_values, X_test)\n"
+    "shap.summary_plot(shap_values, X_test)"
    ]
   },
   {
@@ -251,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -342,20 +354,18 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# 1. Get predicted probabilities for the positive class (trending = 1)\n",
+    "# Get predicted probabilities for the positive class (trending = 1)\n",
     "probs = model.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# 2. Create a DataFrame with predictions\n",
+    "# Create a DataFrame with predictions\n",
     "pred_df = daily_hashtags.loc[X_test.index].copy()\n",
     "pred_df['trending_probability'] = probs\n",
     "\n",
-    "# 3. Filter for today's hashtags (or latest date)\n",
+    "# Filter for today's hashtags (or latest date)\n",
     "latest_date = pred_df['post_date'].max()\n",
     "today_hashtags = pred_df[pred_df['post_date'] == latest_date]\n",
     "\n",
-    "# 4. Get top 10 most likely trending hashtags\n",
+    "# Get top 10 most likely trending hashtags\n",
     "top_trending = (\n",
     "    today_hashtags[['hashtag_name', 'trending_probability']]\n",
     "    .sort_values(by='trending_probability', ascending=False)\n",
@@ -363,7 +373,7 @@
     "    .head(20)\n",
     ")\n",
     "\n",
-    "top_trending\n"
+    "top_trending"
    ]
   },
   {
@@ -392,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,14 +435,14 @@
    ],
    "source": [
     "\n",
-    "# 1. Get predicted probabilities for the positive class (trending = 1)\n",
+    "# Get predicted probabilities for the positive class (trending = 1)\n",
     "probs = model.predict_proba(X_test)[:, 1]\n",
     "\n",
-    "# 2. Create a DataFrame with predictions\n",
+    "# Create a DataFrame with predictions\n",
     "pred_df = daily_hashtags.loc[X_test.index].copy()\n",
     "pred_df['trending_probability'] = probs\n",
     "\n",
-    "# 3. Filter for hashtags from the last 30 days\n",
+    "# Filter for hashtags from the last 30 days\n",
     "latest_date = pred_df['post_date'].max()\n",
     "start_date_month = latest_date - pd.Timedelta(days=29)  # last 30 days including today\n",
     "\n",
@@ -440,7 +450,7 @@
     "    (pred_df['post_date'] >= start_date_month) & (pred_df['post_date'] <= latest_date)\n",
     "]\n",
     "\n",
-    "# 4. Get top 20 most likely trending hashtags across the month\n",
+    "# Get top 20 most likely trending hashtags across the month\n",
     "top_trending_month = (\n",
     "    month_hashtags[['hashtag_name', 'post_date', 'trending_probability']]\n",
     "    .sort_values(by='trending_probability', ascending=False)\n",
@@ -448,7 +458,7 @@
     "    .head(20)\n",
     ")\n",
     "\n",
-    "# 5. Show the result\n",
+    "# Show the result\n",
     "print(top_trending_month)\n"
    ]
   },
@@ -480,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -573,17 +583,17 @@
    ],
    "source": [
     "\n",
-    "# STEP 1: Predict trending probabilities\n",
+    "# Predict trending probabilities\n",
     "probs = model.predict_proba(X_test)[:, 1]\n",
     "pred_df = daily_hashtags.loc[X_test.index].copy()\n",
     "pred_df['trending_probability'] = probs\n",
     "\n",
-    "# STEP 2: Define date ranges\n",
+    "# Define date ranges\n",
     "latest_date = pred_df['post_date'].max()\n",
     "last_7_days = latest_date - pd.Timedelta(days=6)\n",
     "last_30_days = latest_date - pd.Timedelta(days=29)\n",
     "\n",
-    "# STEP 3: Get Top N for Weekly\n",
+    "# Get Top N for Weekly\n",
     "top_week = (\n",
     "    pred_df[pred_df['post_date'] >= last_7_days]\n",
     "    .sort_values(by='trending_probability', ascending=False)\n",
@@ -592,7 +602,7 @@
     "    .assign(source='weekly')\n",
     ")\n",
     "\n",
-    "# STEP 4: Get Top N for Monthly\n",
+    "# Get Top N for Monthly\n",
     "top_month = (\n",
     "    pred_df[pred_df['post_date'] >= last_30_days]\n",
     "    .sort_values(by='trending_probability', ascending=False)\n",
@@ -601,7 +611,7 @@
     "    .assign(source='monthly')\n",
     ")\n",
     "\n",
-    "# STEP 5: Merge to compare\n",
+    "# Merge to compare\n",
     "combined = pd.concat([top_week, top_month])\n",
     "combined_summary = (\n",
     "    combined.groupby('hashtag_name')\n",
@@ -614,8 +624,7 @@
     "    .sort_values(by='max_probability', ascending=False)\n",
     ")\n",
     "\n",
-    "print(combined_summary)\n",
-    "\n"
+    "print(combined_summary)"
    ]
   },
   {
