--- a/notebooks/Trends/deprioritized_trend_ensemble_modeling.ipynb
+++ b/notebooks/Trends/deprioritized_trend_ensemble_modeling.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta\n",
-    "import re\n"
+    "import re"
    ]
   },
   {
